<resources>

    <string name="app_name">TravelBudget</string>
    <string name="title_activity_main">Travel budget</string>

    <!--authFragment-->
    <string name="loading">Loading…</string>
    <string name="disconnect">Disconnect</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Sign in</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="signed_out">Signed Out</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="welcome_to_the">Welcome to the</string>
    <string name="travel_budget">Travel budget</string>
    <string name="skip">Skip</string>

    <!--toggle-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--navHeader-->
    <string name="profile_photo">Profile photo</string>

    <!--menuNavDrawer-->
    <string name="change_account">Change account</string>
    <string name="settings">Settings</string>
    <string name="send_feedback">Send a feedback"</string>
    <string name="make_job_offer">Make a job offer</string>

    <!--emptyTripCardFragment-->
    <string name="add_new_trip">Add new trip</string>

    <!-- mainFragment-->
    <string name="daily_budget">Daily budget</string>
    <string name="savings">Savings</string>
    <string name="mandatory_costs">Mandatory costs</string>
    <string name="everyday_costs">Everyday costs</string>
    <string name="drag">Drag</string>
    <string name="income">Income</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="swipe">Swipe</string>

    <!--createTripFragment-->
    <string name="name">Name</string>
    <string name="dates">Dates</string>
    <string name="or">OR</string>
    <string name="save">SAVE</string>

    <!--emptyFragment-->
    <string name="add_new_trip_to_display_your_current_budget">Add new trip to display your current budget.</string>

    <!--addCost-->
    <string name="add_cost">Add cost</string>

</resources>
